syntax = "proto3";

package class;
option go_package = "github.com/Ddarli/gym/class-service/models";


service ClassService {
  rpc GetClass(GetClassRequest) returns (GetClassResponse);
  rpc CreateClass(CreateClassRequest) returns (CreateClassResponse);
  rpc GetClasses(GetClassesRequest) returns (GetClassesResponse);
}

message GetClassesRequest{}

message Class {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 capacity = 4;
}

message GetClassRequest {
  string id = 1;
}

message GetClassResponse {
  Class class = 1;
}

message CreateClassRequest {
  string name = 1;
  string description = 2;
  int32 capacity = 3;
}

message CreateClassResponse {
  Class class = 1;
}

message GetClassesResponse {
  repeated Class classes = 1;
}