syntax = "proto3";

package user;
option go_package = "github.com/Ddarli/gym/user-service/models";


service UserService{
  rpc CreateUser(CreateUserRequest) returns(User);
  rpc UpdateUser (UpdateUserRequest) returns (User);
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string phone_number = 5;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string phone_number = 4;
}

message UpdateUserRequest {
  string id = 1;
  User user = 2;
}

message AuthenticateRequest {
  string username = 1;
  string password = 2;
}

message AuthenticateResponse {
  string token = 1;
  string error = 2;
}

message VerifyTokenRequest{
  string token = 1;
}
message VerifyTokenResponse{
  bool result = 1;
}